--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-    "name": "@glowsrc/dns",
-    "version": "0.1.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "lint": "prettier --write \"**/**.(ts|js|json|tsx|jsx)\"",
-        "build": "tsc\ngoss import"
-    },
-    "keywords": [],
-    "author": "Googlefan256 (https://opensource.glow-bot.com/)",
-    "license": "MIT",
-    "devDependencies": {
-        "goss": "^0.1.3",
-        "prettier": "^2.6.2",
-        "typescript": "^4.6.3"
-    }
+	"name": "@glowsrc/dns",
+	"version": "0.1.0",
+	"description": "",
+	"main": "dist/index.cjs",
+	"scripts": {
+		"lint": "prettier --write \"**/**.(ts|js|json|tsx|jsx)\"",
+		"build": "tsc\ngoss import\nnpm run lint"
+	},
+	"keywords": [],
+	"author": "Googlefan256 (https://opensource.glow-bot.com/)",
+	"license": "MIT",
+	"devDependencies": {
+		"goss": "^0.1.3",
+		"prettier": "^2.6.2",
+		"typescript": "^4.6.3"
+	},
+	"dependencies": {
+		"@types/node": "^17.0.25"
+	},
+	"module": "dist/index.mjs"
 }
