--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
 	"version": "0.1.0",
 	"description": "",
 	"main": "dist/index.cjs",
+	"module": "dist/index.mjs",
 	"scripts": {
 		"lint": "prettier --write \"**/**.(ts|js|json|tsx|jsx)\"",
 		"build": "tsc\ngoss import\nnpm run lint",
-        "prepare": "npm run build\nnpm run lint"
+		"prepare": "npm run build\nnpm run lint"
 	},
 	"keywords": [],
 	"author": "Googlefan256 (https://opensource.glow-bot.com/)",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/node": "^17.0.25",
 		"goss": "^0.1.3",
 		"prettier": "^2.6.2",
 		"typescript": "^4.6.3"
 	},
-	"dependencies": {
-		"@types/node": "^17.0.25"
-	},
-	"module": "dist/index.mjs"
+	"files": [
+		"dist/"
+	]
 }
