--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"build": "tsc\ngoss import\nnpm run lint\ncp ./src/index.mjs ./dist/index.mjs",
 		"prepare": "npm run build\nnpm run lint"
 	},
-	"keywords": [],
+	"keywords": [ "dns" ],
 	"author": "Googlefan256 (https://opensource.glow-bot.com/)",
 	"license": "MIT",
 	"devDependencies": {
